<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Morse Lullabies</string>
    <string name="hello_world">www.paulrowe.com</string>
    <string name="action_settings">Settings</string>
    <string name="zero">.0</string>
    <string name="morse">Morse</string>
    <string name="noise">Noise</string>
    <string name="volumes">Volumes</string>
    <string name="uptime">Uptime</string>
    <string name="zero_time">0:00</string>
    <string name="spacer">  </string>
    <string name="yes_button">Yes</string>
	<string name="no_button">No</string>
	<string name="exit_question">Are you sure you want to exit Morse Lullabies?</string>
    <string name="setting_support_summary">Send an e-mail to ask for a new feature or to fix a bug.</string>
    <string name="setting_support_title">Support</string>
    <string name="support_dialog_title">Support</string>
    <string name="support_dialog_message">Request a feature or send a request to fix a bug.</string>
    <string name="cancel_button">Cancel</string>
    <string name="email_button">Send e-mail</string>
	<string name="action_support">Support</string>	
	<string name="action_play">Play directory</string>
</resources>
